make some editing as required

--- a/about/index.html
+++ b/about/index.html
@@ -395,7 +395,7 @@
             </div>
             <div class="add-container">
               <h3>Email:</h3>
-              <p>care@tech-lot.com</p>
+              <a href="mailto:contact@teclot.com"><p style="color: black;">contact@techlot.com</p></a>
             </div>
             <div class="add-container">
               <h3>Telephone:</h3>
