--- a/index.html
+++ b/index.html
@@ -113,13 +113,20 @@
         </h2>
 
         <p>
-          Tech-lots is a new IT firm with operation both Nigeria and the USA.
-          The firm was founded in 2015 by Lateef Rasaq. The vision of the firm
-          is to foster sharing of IT solutions to the country and also to be the
-          most recognized IT providing high value services to her clients. Aside
-          IT services, The firm also provide other services across different
-          domain such airline, transportation, and logistics and more.
+          Tech-lots is a new IT firm with operation both Nigeria and United
+          States. The firm was founded in 2015 by Lateef Rasaq. The vision of
+          the firm is to foster sharing of IT solutions to the country and also
+          to be the most recognized IT companies providing high value services
+          to her clients. The firm provides IT solutions and services to clients
+          across different domains such as, airlines, transports and logistics,
+          healthcare, chain of restaurants and more.
         </p>
+
+        <a href="./about/">
+          <button style="--bg-color: var(--wine-color)" class="primary-button">
+            Learn More
+          </button>
+        </a>
       </div>
       <img
         class="about-img"
@@ -321,7 +328,7 @@
             </div>
             <div class="add-container">
               <h3>Email:</h3>
-              <p>care@tech-lot.com</p>
+              <a href="mailto:contact@teclot.com"><p style="color: black;">contact@techlot.com</p></a>
             </div>
             <div class="add-container">
               <h3>Telephone:</h3>
