make some editing as required

--- a/about/index.html
+++ b/about/index.html
@@ -81,7 +81,7 @@
       <div class="about-text">
         <h3>Company</h3>
         <p>
-          Tech-lot is a new IT firm with operation both Nigeria and the USA. The
+          Tech-lot is a new IT firm with operations both Nigeria and the United States. The
           firm was founded in 2015 by a Nigerian-American Information Technology
           expert. The vision of the firm is to foster sharing of IT solutions
           across the globe and also to be among the most recognized and
