--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="actions">
         <h1>Tech-lot</h1>
         <p>
-          Tech-lots is a new IT firm with operation both Nigeria and the USA.
+          Tech-lots is a new IT firm with operations both Nigeria and the United States.
           The firm was founded in 2015 by Lateef Rasaq.
         </p>
 
@@ -113,8 +113,7 @@
         </h2>
 
         <p>
-          Tech-lots is a new IT firm with operation both Nigeria and United
-          States. The firm was founded in 2015 by Lateef Rasaq. The vision of
+          Tech-lots is a new IT firm with operations both Nigeria and the United States. The firm was founded in 2015 by Lateef Rasaq. The vision of
           the firm is to foster sharing of IT solutions to the country and also
           to be the most recognized IT companies providing high value services
           to her clients. The firm provides IT solutions and services to clients
