--- a/new-ui/index.html
+++ b/new-ui/index.html
@@ -83,7 +83,7 @@
       <div class="actions">
         <h1>Tech-lot</h1>
         <p>
-          Tech-lot is a new IT firm with operation both Nigeria and the USA. The
+          Tech-lot is a new IT firm with operations both Nigeria and the United States. The
           firm was founded in 2015 a Nigerian-American Information Technology
           expert.
           <br />
