converted all .jpg to .webp

--- a/about/index.html
+++ b/about/index.html
@@ -123,7 +123,7 @@
             business goals.
           </p>
         </div>
-        <img src="../images/mission-bg.jpg" loading="lazy" alt="our-mission" />
+        <img src="../images/mission-bg.webp" loading="lazy" alt="our-mission" />
       </div>
 
       <div class="vision">
@@ -138,7 +138,7 @@
         </div>
 
         <img
-          src="../images/vision-paul.jpg"
+          src="../images/vision-paul.webp"
           loading="lazy"
           alt="vision-image"
         />
@@ -156,7 +156,7 @@
       <div class="team-list">
         <div class="team">
           <div class="team-img">
-            <img src="../images/persons (3).jpg" loading="lazy" alt="CEO" />
+            <img src="../images/persons (3).webp" loading="lazy" alt="CEO" />
           </div>
           <div class="team-details">
             <h4>Abdullateef Gafar</h4>
@@ -177,7 +177,7 @@
 
         <div class="team">
           <div class="team-img">
-            <img src="../images/persons (6).jpg" loading="lazy" alt="CEO" />
+            <img src="../images/persons (6).webp" loading="lazy" alt="CEO" />
           </div>
           <div class="team-details">
             <h4>Baru Muhammed</h4>
@@ -198,7 +198,7 @@
 
         <div class="team">
           <div class="team-img">
-            <img src="../images/persons (1).jpg" loading="lazy" alt="CEO" />
+            <img src="../images/persons (1).webp" loading="lazy" alt="CEO" />
           </div>
           <div class="team-details">
             <h4>Titi Olaoni</h4>
@@ -219,7 +219,7 @@
 
         <div class="team">
           <div class="team-img">
-            <img src="../images/persons (2).jpg" loading="lazy" alt="CEO" />
+            <img src="../images/persons (2).webp" loading="lazy" alt="CEO" />
           </div>
           <div class="team-details">
             <h4>Momoh Maili</h4>
@@ -240,7 +240,7 @@
 
         <div class="team">
           <div class="team-img">
-            <img src="../images/persons (5).jpg" loading="lazy" alt="CEO" />
+            <img src="../images/persons (5).webp" loading="lazy" alt="CEO" />
           </div>
           <div class="team-details">
             <h4>Kashia Khan</h4>
@@ -261,7 +261,7 @@
 
         <div class="team">
           <div class="team-img">
-            <img src="../images/persons (4).jpg" loading="lazy" alt="CEO" />
+            <img src="../images/persons (4).webp" loading="lazy" alt="CEO" />
           </div>
           <div class="team-details">
             <h4>Ashir Dina</h4>
