--- a/moderator/_/index.html
+++ b/moderator/_/index.html
@@ -358,7 +358,7 @@
       const storage = getStorage();
       const storageRef = storageReff(
         storage,
-        "path/TeamPicture/" + name.value + ".jpg"
+        "path/TeamPicture/" + name.value + ".webp"
       );
       const metadata = {
         contentType: picture.files[0].type,
