--- a/service/index.html
+++ b/service/index.html
@@ -99,7 +99,7 @@
           <div class="serv">
             <div class="serv-img">
               <img
-                src="../images/aron-visuals-bZZp1PmHI0E-unsplash.jpg"
+                src="../images/aron-visuals-bZZp1PmHI0E-unsplash.webp"
                 loading="lazy"
                 alt="Skylight"
               />
@@ -114,7 +114,7 @@
           <div class="serv">
             <div class="serv-img">
               <img
-                src="../images/codioful-formerly-gradienta-bKESVqfxass-unsplash.jpg"
+                src="../images/codioful-formerly-gradienta-bKESVqfxass-unsplash.webp"
                 loading="lazy"
                 alt="CEO"
               />
@@ -129,7 +129,7 @@
           <div class="serv">
             <div class="serv-img">
               <img
-                src="../images/billy-huynh-W8KTS-mhFUE-unsplash.jpg"
+                src="../images/billy-huynh-W8KTS-mhFUE-unsplash.webp"
                 loading="lazy"
                 alt="CEO"
               />
@@ -158,7 +158,7 @@
 
           <div class="serv">
             <div class="serv-img">
-              <img src="../images/vision-paul.jpg" loading="lazy" alt="CEO" />
+              <img src="../images/vision-paul.webp" loading="lazy" alt="CEO" />
             </div>
             <div class="serv-details">
               <span class="serv-view-type">Solution Briefs</span>
@@ -182,7 +182,7 @@
           <div class="serv">
             <div class="serv-img">
               <img
-                src="../images/aron-visuals-bZZp1PmHI0E-unsplash.jpg"
+                src="../images/aron-visuals-bZZp1PmHI0E-unsplash.webp"
                 loading="lazy"
                 alt="Skylight"
               />
@@ -197,7 +197,7 @@
           <div class="serv">
             <div class="serv-img">
               <img
-                src="../images/codioful-formerly-gradienta-bKESVqfxass-unsplash.jpg"
+                src="../images/codioful-formerly-gradienta-bKESVqfxass-unsplash.webp"
                 loading="lazy"
                 alt="CEO"
               />
@@ -212,7 +212,7 @@
           <div class="serv">
             <div class="serv-img">
               <img
-                src="../images/billy-huynh-W8KTS-mhFUE-unsplash.jpg"
+                src="../images/billy-huynh-W8KTS-mhFUE-unsplash.webp"
                 loading="lazy"
                 alt="CEO"
               />
@@ -241,7 +241,7 @@
 
           <div class="serv">
             <div class="serv-img">
-              <img src="../images/vision-paul.jpg" loading="lazy" alt="CEO" />
+              <img src="../images/vision-paul.webp" loading="lazy" alt="CEO" />
             </div>
             <div class="serv-details">
               <span class="serv-view-type">Solution Briefs</span>
@@ -265,7 +265,7 @@
           <div class="serv">
             <div class="serv-img">
               <img
-                src="../images/aron-visuals-bZZp1PmHI0E-unsplash.jpg"
+                src="../images/aron-visuals-bZZp1PmHI0E-unsplash.webp"
                 loading="lazy"
                 alt="Skylight"
               />
@@ -280,7 +280,7 @@
           <div class="serv">
             <div class="serv-img">
               <img
-                src="../images/codioful-formerly-gradienta-bKESVqfxass-unsplash.jpg"
+                src="../images/codioful-formerly-gradienta-bKESVqfxass-unsplash.webp"
                 loading="lazy"
                 alt="CEO"
               />
@@ -295,7 +295,7 @@
           <div class="serv">
             <div class="serv-img">
               <img
-                src="../images/billy-huynh-W8KTS-mhFUE-unsplash.jpg"
+                src="../images/billy-huynh-W8KTS-mhFUE-unsplash.webp"
                 loading="lazy"
                 alt="CEO"
               />
@@ -324,7 +324,7 @@
 
           <div class="serv">
             <div class="serv-img">
-              <img src="../images/vision-paul.jpg" loading="lazy" alt="CEO" />
+              <img src="../images/vision-paul.webp" loading="lazy" alt="CEO" />
             </div>
             <div class="serv-details">
               <span class="serv-view-type">Solution Briefs</span>
@@ -348,7 +348,7 @@
           <div class="serv">
             <div class="serv-img">
               <img
-                src="../images/aron-visuals-bZZp1PmHI0E-unsplash.jpg"
+                src="../images/aron-visuals-bZZp1PmHI0E-unsplash.webp"
                 loading="lazy"
                 alt="Skylight"
               />
@@ -363,7 +363,7 @@
           <div class="serv">
             <div class="serv-img">
               <img
-                src="../images/codioful-formerly-gradienta-bKESVqfxass-unsplash.jpg"
+                src="../images/codioful-formerly-gradienta-bKESVqfxass-unsplash.webp"
                 loading="lazy"
                 alt="CEO"
               />
@@ -378,7 +378,7 @@
           <div class="serv">
             <div class="serv-img">
               <img
-                src="../images/billy-huynh-W8KTS-mhFUE-unsplash.jpg"
+                src="../images/billy-huynh-W8KTS-mhFUE-unsplash.webp"
                 loading="lazy"
                 alt="CEO"
               />
@@ -407,7 +407,7 @@
 
           <div class="serv">
             <div class="serv-img">
-              <img src="../images/vision-paul.jpg" loading="lazy" alt="CEO" />
+              <img src="../images/vision-paul.webp" loading="lazy" alt="CEO" />
             </div>
             <div class="serv-details">
               <span class="serv-view-type">Solution Briefs</span>
