--- a/moderator/_/tryingBox.html
+++ b/moderator/_/tryingBox.html
@@ -25,7 +25,7 @@
     // Upload the picture file to the "teamMembers" folder in Firebase Storage
     const pictureRef = storageRef(
       storage,
-      `teamMembers/${newTeamMemberId}.jpg`
+      `teamMembers/${newTeamMemberId}.webp`
     );
     await uploadBytes(pictureRef, file);
 
